--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="js/paper-full.js" type="text/javascript"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@1,400;1,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="css/personal.css">
     <script type="text/paperscript" canvas="myCanvas">
@@ -66,7 +67,7 @@
         <nav id="main-nav" class="navbar navbar-dark navbar-expand-md
                 bgColor fix-top py-0">
             <div class="container">
-                <a href="#" class="navbar-brand">ANDY HUANG</a>
+                <a href="#" class="navbar-brand" id="brand"><img class="logo" src="images/myLogo2.png"><div>ANDY</div></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -106,10 +107,9 @@
 
                 <blockquote>
                     <p class="lead text-white px-5">
-                        "We grow great by dreams. All big men are dreamers. They see things in the soft haze of a spring day or in the red fire of a long winter’s evening. Some of us let these great dreams die, but others nourish and protect them; nurse them through bad days
-                        till they bring them to the sunshine and light which comes always to those who sincerely hope that their dreams will come true."
+                        "Civilization is built on dreams. Everyone has dreams of what that they one day want to achieve. With some, the dream fades, but for those who actively pursue and work towards those dreams eventually dreams will no longer be dreams but reality."
                     </p>
-                    <footer class="blockquote-footer text-right px-5">Woodrow Wilson
+                    <footer class="text-right px-5">ANDY HUANG
                     </footer>
                 </blockquote>
 
@@ -159,7 +159,7 @@
             <section id="ContactMe" class="contentSection">
 
                 <h1 class="display-2">Contact Info</h1>
-                <p>Don't be shy, come and say hi!</p>
+                <p>Contact Me to Learn More!</p>
                 <a href="https://www.linkedin.com/in/andyhuang2797/"><i
                             class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/Andy051"><i class="fab
