Fixed some typos in Abouts

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
                             <h1 class="display-2">About ME</h1>
                             <p>Hello! My name is Andy Huang, a recent graduate from <a href="https://www.psu.edu/">The
-                                        Pennsylvania State University</a> with a Bachelor's of Science degree in Computer Science and minors in Cyber and Security Mathematics.
+                                        Pennsylvania State University</a> with a Bachelor of Science degree in Computer Science and minors in Cyber Security and Mathematics.
                             </p>
                             <p>I enjoy various challenges (especially the sastification of completing the challenge) and learning new technologies. Personal hobbies of mine includes: reading books, playing games, watching anime, and interacting with my friends</p>
 
